--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,10 @@
                     "ms-python.python",
                     "tomoki1207.pdf",
                     "streetsidesoftware.code-spell-checker",
-                    "njpwerner.autodocstring"
+                    "njpwerner.autodocstring",
+                    "mikestead.dotenv",
+                    "kiteco.kite",
+                    
                 ],
     "runArgs": [
                 "--net", "host",
